--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo blog
+title: Guoxin's blog
 subtitle: 
 description: Guoxin's hexo blog.
 author: Guoxin
